# VolcanicAshInversion

./: .gitignore  ash_inv.yml  pyproject.toml  setup.cfg
AshInv/: APosteriori.py  APriori.py  AshInversion.py  MatchFiles.py  Plot.py
