[metadata]
name = AshInv
version = 1.2.0

[options]
install_requires =
    pandas
    numpy
    netcdf4
    matplotlib
    scipy
    psutil
    configargparse
    joblib

package_dir =
    AshInv = AshInv
packages =
    AshInv
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    APosteriori = AshInv.APosteriori:main
    AshInversion = AshInv.AshInversion:main
    MatchFiles = AshInv.MatchFiles:main
    Plot = AshInv.Plot:main
    APriori = AshInv.APriori:main

[options.extras_require]
test =
    pytest>=6.0
    pytest-dependency
