[metadata]
name = AshInv
version = 1.2.0

[options]
install_requires =
    json5==0.8.5
    matplotlib==3.3.4
    netcdf4==1.5.3
    numpy==1.17.4
    # numpy-base==1.17.4
    pandas==0.25.3
    # python==3.7.3
    python-dateutil==2.8.1
    scipy==1.3.2
    psutil==5.6.7
    configargparse==0.14.0
    memory_profiler==0.55
    joblib==1.1.0

package_dir =
    AshInv = AshInv
packages =
    AshInv
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    APosteriori = AshInv.APosteriori:main
    AshInversion = AshInv.AshInversion:main
    MatchFiles = AshInv.MatchFiles:main
    Plot = AshInv.Plot:main
    APriori = AshInv.APriori:main

[options.extras_require]
test =
    pytest==6.2.5
    pytest-dependency==0.5.1
zenodo =
    zenodo_get
